# fractalmusic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  QUE_ES_FRACTALWORLD.md  README.md  pyproject.toml
.claude/agents/: audio-engineer.md  fractal-theorist.md  music-ux-voice.md  simplifier.md
.claude/skills/audit-fractalmusic/: SKILL.md
chat_bff/: pyproject.toml
chat_bff/prompts/: citation_strict.md  model_reading.md
chat_bff/src/chat_bff/: __init__.py  app.py  bootstrap.py  models.py  prompts.py  protocols.py  services.py  settings.py
chat_bff/src/chat_bff/citations/: __init__.py  parser.py  validator.py
chat_bff/src/chat_bff/routes/: chat.py  generate.py  health.py
chat_bff/tests/eval/: calibration_pairs.json  calibration_results.md  run_calibration.py
chat_bff/tests/integration/: conftest.py  test_chat_route.py  test_generate_route.py
chat_bff/tests/unit/: test_parser.py  test_validator.py
docs/agents/: fractal-expert.md
docs/gatople/: app.js  audio.js  compose.css  compose.html  compose.js  data.json  index.html  progressions.json  style.css
docs/gatople/flow/: app.js  index.html  style.css
docs/sources/: PROGRESSION_SOURCES.md
docs/specs/: SPEC-chat-v1.md  SPEC-fractal-generator.md  SPEC-fractal-strudel-studio.md
fractalmusic/: __init__.py  cartas.py  colors.py  dodecamundo.py  formulas.py  gallery.py  gatople.py  modes.py  scales.py  showcase.py  svg.py  symbols.py  wheel.py
fractalmusic/generate/: __init__.py  adapters.py  cli.py  loop.py  realize.py  scoring.py  types.py
fractalmusic/render/: __init__.py  engine.py  reverb.py  soundfont.py  synth.py
landing/: compose.html  gate.js  gatople-page.css  gatople.html  index.html  lib.js  progressions_baked.json
scripts/: build_gatople_data.py  build_progressions_data.py  check_code.sh  setup_dev.sh  test.sh
tests/integration/: test_all_tonics.py  test_cross_module.py  test_gatople_data_sync.py  test_progressions_baked_sync.py  test_pytheory_bridge.py  test_pytheory_interop.py
tests/smoke/: test_generate_music_smoke.py
tests/uat/: test_composing_steps.py  test_dodecamundo_steps.py
tests/uat/features/: composing.feature  dodecamundo.feature
tests/unit/: test_cartas.py  test_cli.py  test_dodecamundo.py  test_formulas.py  test_gatople.py  test_generate.py  test_modes.py  test_scales.py  test_showcase.py  test_svg.py  test_triads.py  test_wheel.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: data.json
web/src/: main.tsx
web/src/chat/: AnswerView.tsx  ChatPanel.tsx  CitationChip.tsx  LLMToggle.tsx  api.ts  chat.css  types.ts
web/src/composer/: ComposerPanel.tsx  api.ts  composer.css  types.ts
web/src/gatople/: GatopleApp.tsx  constants.ts  gatople.css  geometry.ts  types.ts
web/src/gatople/components/: BindingsTable.tsx  CyclopsEye.tsx  Fretboard.tsx  InnerDisc.tsx  OuterDisc.tsx  PaletteToggle.tsx  Piano.tsx  StepControls.tsx  Wheel.tsx
web/src/gatople/hooks/: useGatople.ts  usePayload.ts
web/src/shell/: AppShell.tsx  shell.css
web/src/strudel/: StrudelPanel.tsx  api.ts  strudel.css
