[project]
name = "chat_bff"
version = "0.1.0"
description = "Single-turn citation-strict chat over the indexed fractal corpus"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
    "anthropic>=0.40.0",
    "cemaf",
    "meridian-library",
]

[tool.uv.sources]
cemaf = { path = "../../iccha_context_multi_agent/cemaf", editable = true }
meridian-library = { path = "../../iccha_context_multi_agent/meridian_library", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.115.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_bff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
    "eval: golden-set evaluation tests (run explicitly with -m eval)",
]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
